fix(backend): outgoing mail rendered nondeterministically; a rule under text is no longer a heading
Two defects, one root.

ENABLED_BLOCKS was a Set.of. CommonMark registers block parsers in
iteration order, and for a rule under a paragraph whichever claims the line
first wins: heading first reads it as a setext underline, thematic break
first reads it as a rule. Set.of randomizes iteration per JVM — its layout
is salted at class-init — so the same message rendered differently between
runs. Measured, not deduced: six runs of one parse gave five headings and
one thematic break. It surfaced as CI failing on exactly the `---` cases
while the same commit passed locally. Now a LinkedHashSet with an explicit
order.

The behaviour that order settles on was itself wrong. A rule under a line
of text made that line a heading, so an ordinary signature — a name with a
rule beneath it — went out as a level-two heading that had swallowed both
the RFC 3676 separator and the sender's name, and switched a message
written as plain text into multipart/alternative. Setext headings now
demote back to paragraphs with the underline kept as literal text, since
the two parts of a message must say the same thing and the dashes are in
what the user typed. ATX headings are untouched: same reasoning that keeps
indented code blocks off and fenced ones on, in that formatting in a mail
should be an explicit gesture.

ATX and setext cannot be separated through enabledBlockTypes — CommonMark
has one Heading class for both — but they differ in the source: ATX is
always one line, setext spans its text plus the underline. Hence
includeSourceSpans and the span count; comparing trees with and without
spans confirmed they annotate blocks without changing parsing.

text/plain was correct throughout, so message content was never affected;
only the HTML alternative was.

Verified: with the demotion disabled, five setext tests fail while ATX
headings and a standalone rule keep passing; six separate JVM runs o